# rro

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MAP.md  NOTES.md  README.md  SECURITY.md  rust-toolchain.toml  workspace.manifest.json
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  capability.yml  config.yml  measurement.yml
.github/workflows/: ci.yml
baselines/: container-estate.json
crates/classifier/src/: daemon.rs  heuristic.rs
crates/connectome/: Cargo.toml
crates/connectome/src/: graph.rs  lib.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: fs.rs  jsonl.rs  lib.rs
crates/connectors/tests/: sync.rs
crates/connxism/: Cargo.toml
crates/connxism/src/: estate.rs  filter.rs  index.rs  keys.rs  lib.rs  model.rs  pending.rs  query.rs  rels.rs  store.rs  strategies.rs  txn.rs
crates/connxism/src/kv/: fjall.rs  mod.rs
crates/connxism/tests/: analyzer.rs  collections.rs  crash.rs  datetime.rs  estate.rs  fjall_spike.rs  fusion_weights.rs  geo.rs  graph_persist.rs  key_limit.rs  lexical_prune.rs  multivec.rs  payload_ops.rs  prefetch.rs  quantized.rs  query.rs  query_extras.rs  routing.rs  sparse.rs  strategies.rs  transactions.rs
crates/embedder/: Cargo.toml
crates/embedder/benches/: embed.rs
crates/embedder/src/: deterministic.rs  openai.rs  tokenize.rs
crates/embedder/src/candle_qwen/: encoder.rs  mod.rs
crates/embedder/tests/: candle_qwen_gate.rs  engine_agreement.rs  properties.rs
crates/model-registry/: Cargo.toml
crates/recall/: Cargo.toml
crates/recall/benches/: search.rs
crates/recall/examples/: annprobe.rs
crates/recall/src/: ann.rs  flat.rs  quant.rs
crates/recall/tests/: paged.rs  properties.rs
crates/reranker/: Cargo.toml
crates/reranker/benches/: rerank.rs
crates/reranker/src/: bm25.rs  candle_qwen.rs  http.rs
crates/reranker/tests/: properties.rs
crates/rrd/src/: baseline.rs  gates.rs  lib.rs  mode.rs  plan.rs  registry.rs  router.rs  rro.rs  shape.rs  trigger.rs
crates/rro-client/: Cargo.toml
crates/rro-client/tests/: client.rs
crates/rro-core/: Cargo.toml
crates/rro-core/src/: error.rs  events.rs  fabric.rs  lib.rs  query.rs  simd.rs  text.rs  time.rs  toon.rs  traits.rs
crates/rro-core/tests/: properties.rs
crates/rro-engine/: Cargo.toml
crates/rro-engine/examples/: demo.rs  featbench.rs  live_grounding.rs
crates/rro-engine/src/: auth.rs  embedded.rs  estate_map.rs  flow.rs  handler.rs  ingest.rs  lib.rs  ops.rs  sample.rs  serve.rs  signal_model.rs
crates/rro-engine/tests/: auth.rs  estate_is_yours.rs  introspect.rs  maintenance.rs  quotas.rs  rbac.rs  shape_is_early_intent.rs  turnkey.rs  tx_wire.rs
crates/rro-net/: Cargo.toml
crates/rro-net/src/: handler.rs  lib.rs  local.rs  message.rs  tcp.rs
crates/rro-ql/src/: lib.rs
deploy/: config.env.example  rrf.service  rro-estate.volume  rro-mesh.pod
docs/: ARCHITECTURE.md  BENCHMARKS.md  EXECUTION.md  FABRIC.md  FJALL_MIGRATION_PLAN.md  MODELS.md  OBSERVABILITY.md  PARITY.md  PLAN.md  ROADMAP.md  TESTING.md
docs/adr/: 0001-inference-backends.md  0002-rrd-reason-ready-objects.md
integrations/claude-code/: README.md
scripts/: fetch-models.sh  gates.sh
