[package]
name = "connectome"
description = "Reason Ready — the visual/relational map. Renders how memories and reasoning connect."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rro-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
