[package]
name = "connxism"
description = "Reason Ready — the kvs-connectome. Fjall-backed estate management: nodes, connectors, warp points, and the persistent hybrid (vector + BM25) recall spine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rro-core = { workspace = true }
recall = { workspace = true }
fjall = { version = "3.1.7" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }
embedder = { workspace = true }
