[package]
name = "recall"
description = "Reason Ready — dense vector memory. The Recall engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rro-core = { workspace = true }
async-trait = { workspace = true }
# Paged vector storage: cold vectors page from a node-ordered file through a
# bounded cache (safe `read_at`, no mmap, no unsafe). `bytemuck` reinterprets the
# page buffers between `&[u8]` and `&[f32]`/`&[u8]`. Not a storage-engine
# dependency — recall stays a pure compute crate and keeps `forbid(unsafe_code)`.
bytemuck = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "search"
harness = false
