[package]
name = "reranker"
description = "Reason Ready — true-relevance ordering. Lexical default + DevPULSE (Nemotron) plug-point."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
# Enables the candle-backed DevPULSE (Nemotron) reranker.
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:embedder", "embedder/candle"]

[dependencies]
rro-core = { workspace = true }
embedder = { workspace = true, optional = true }
candle-core = { version = "0.11.0", optional = true }
candle-nn = { version = "0.11.0", optional = true }
candle-transformers = { version = "0.11.0", optional = true }
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"], optional = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time", "rt"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rerank"
harness = false
