[package]
name = "rro-client"
description = "Reason Ready — the typed client. Treat any rro node as local over the a2a layer-2 protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "rro-mcp"
path = "src/bin/rro-mcp.rs"

[dependencies]
rro-core = { workspace = true }
rro-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
# dev-only (integration tests spin up an in-process engine).
connxism = { workspace = true }
rro-engine = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
